# cchooked

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  spec.md  usage.md
src/: action.rs  config.rs  context.rs  error.rs  main.rs  output.rs  parser.rs  rule.rs
tests/: integration_tests.rs
