[package]
name = "cchooked"
version = "0.1.0"
edition = "2024"
description = "Claude Code Hooks Engine - Rule-based hook processor"
license = "MIT"

[[bin]]
name = "cchooked"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", default-features = false, features = ["parse"] }
regex = { version = "1.10", default-features = false, features = ["std", "perf", "unicode-perl"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
