[package]
name = "cchooked"
version = "0.5.1"
edition = "2024"
description = "Claude Code Hooks Engine - Rule-based hook processor"
license = "MIT"

[[bin]]
name = "cchooked"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", default-features = false, features = ["parse"] }
regex-lite = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
shellish_parse = "2.2"

[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
